--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,6 +54,7 @@ ul {
     bottom: 0;
     left: 0;
     right: 0;
+    /*backdrop-filter: invert();*/
     backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.4);
     display: none;
